<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize"
                android:text="@string/convert_from"
                android:padding="5dp"/>

            <Spinner
                android:id="@+id/mass_converter_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/masses"/>

        </LinearLayout>

        <TextView
            android:id="@+id/converter_kg_title"
            android:layout_column="0"
            android:layout_row="1"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/kilogram"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/main_input_mass_converter"
            android:ems="7"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/converter_kg_unit"
            android:layout_column="2"
            android:layout_row="1"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/kg"
            android:padding="5dp"/>

        <Space
            android:layout_height="12dp"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/converter_lb_title"
            android:layout_column="0"
            android:layout_row="3"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/pound"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_lb_converter"
            android:layout_column="1"
            android:layout_row="3"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_lb_unit"
            android:layout_column="2"
            android:layout_row="3"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/lb"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_g_title"
            android:layout_column="0"
            android:layout_row="4"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/gram"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_g_converter"
            android:layout_column="1"
            android:layout_row="4"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_g_unit"
            android:layout_column="2"
            android:layout_row="4"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/g"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_ton_title"
            android:layout_column="0"
            android:layout_row="5"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/metric_ton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_ton_converter"
            android:layout_column="1"
            android:layout_row="5"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_ton_unit"
            android:layout_column="2"
            android:layout_row="5"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/ton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_oz_title"
            android:layout_column="0"
            android:layout_row="6"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/ounce"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_oz_converter"
            android:layout_column="1"
            android:layout_row="6"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_oz_unit"
            android:layout_column="2"
            android:layout_row="6"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/oz"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_cd_title"
            android:layout_column="0"
            android:layout_row="7"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/carat"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_cd_converter"
            android:layout_column="1"
            android:layout_row="7"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_cd_unit"
            android:layout_column="2"
            android:layout_row="7"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/cd"
            android:padding="5dp"/>

    </GridLayout>

</RelativeLayout>