<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <GridLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize"
                android:text="@string/convert_from"
                android:padding="5dp"/>

            <Spinner
                android:id="@+id/density_converter_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/densities" />

        </LinearLayout>

        <TextView
            android:id="@+id/converter_ppg_title"
            android:layout_column="0"
            android:layout_row="1"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/lbpergal"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/main_input_density_converter"
            android:ems="6"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/converter_ppg_unit"
            android:layout_column="2"
            android:layout_row="1"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/ppg"
            android:padding="5dp"/>

        <Space
            android:layout_height="12dp"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/converter_lbft3_title"
            android:layout_column="0"
            android:layout_row="3"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/pound_per_cubic_foot"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_lbft3_converter"
            android:layout_column="1"
            android:layout_row="3"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_lbft3_unit"
            android:layout_column="2"
            android:layout_row="3"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/lbft3"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_kgl_title"
            android:layout_column="0"
            android:layout_row="4"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/kgpl"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_kgl_converter"
            android:layout_column="1"
            android:layout_row="4"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_kgl_unit"
            android:layout_column="2"
            android:layout_row="4"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/kgl"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_kgm3_title"
            android:layout_column="0"
            android:layout_row="5"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/kilogram_per_cubit_meter"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_kgm3_converter"
            android:layout_column="1"
            android:layout_row="5"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_kgm3_unit"
            android:layout_column="2"
            android:layout_row="5"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/kgm3"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_sg_title"
            android:layout_column="0"
            android:layout_row="6"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/specific_gravity"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/main_output_sg_converter"
            android:layout_column="1"
            android:layout_row="6"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/textSize"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/converter_sg_unit"
            android:layout_column="2"
            android:layout_row="6"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:text="@string/sg"
            android:padding="5dp"/>

    </GridLayout>

</LinearLayout>