<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <GridLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_row="0"
            android:padding="5dp"
            android:text="@string/calculate_for_known_slug_weight"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/slug_current_mud_weight"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="1"
            android:padding="5dp"
            android:text="@string/current_mud_weight"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/slug_input_current_mud_weight"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="1"
            android:ems="5"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_unit_current_mud_weight"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="1"
            android:padding="5dp"
            android:text="@string/ppg"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_slug_mud_weight"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="2"
            android:padding="5dp"
            android:text="@string/slug_mud_weight"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/slug_input_slug_mud_weight"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="2"
            android:ems="5"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_unit_slug_mud_weight"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="2"
            android:padding="5dp"
            android:text="@string/ppg"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_length_mud_weight"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="3"
            android:padding="5dp"
            android:text="@string/dry_pipe_length"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/slug_input_length_mud_weight"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="3"
            android:ems="5"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_unit_length_mud_weight"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="3"
            android:padding="5dp"
            android:text="@string/ft"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_dpid_mud_weight"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="4"
            android:padding="5dp"
            android:text="@string/drill_pipe_id"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/slug_input_dpid_mud_weight"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="4"
            android:ems="5"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_unit_dpid_mud_weight"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="4"
            android:padding="5dp"
            android:text="@string/in"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:layout_row="5"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/slug_clear_data"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/slug_calculate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_calc"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="6"
            android:padding="5dp"
            android:text="@string/slug_volume_required"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_output_volume_required"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="6"
            android:padding="5dp"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_unit_volume_required"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="6"
            android:padding="5dp"
            android:text="@string/bbl"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <Space
            android:layout_height="12dp"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="7" />

        <TextView
            android:id="@+id/slug_volume_back_flow_label"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="8"
            android:padding="5dp"
            android:text="@string/volume_displaced_by_slug"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_output_volume_back_flow"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="8"
            android:padding="5dp"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/slug_unit_volume_back_flow"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="8"
            android:padding="5dp"
            android:text="@string/bbl"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />


    </GridLayout>

</ScrollView>